src/snapshots/hostlist_parser__tests__range_digits-3.snap
---
source: src/lib.rs
expression: "range_digits().easy_parse(\"1-100\")"
---
Ok(
    (
        Range(
            0,
            true,
            1,
            100,
        ),
        "",
    ),
)
