src/snapshots/hostlist_parser__tests__range_digits-4.snap
---
source: src/lib.rs
assertion_line: 281
expression: "range_digits().easy_parse(\"100-0\")"

---
Ok(
    (
        RangeReversed(
            0,
            0,
            100,
        ),
        "",
    ),
)
