src/snapshots/hostlist_parser__tests__single item in reverse order.snap
---
source: src/lib.rs
expression: "parse(\"hostname[7-5]\")"
---
Ok(
    {
        "hostname5",
        "hostname6",
        "hostname7",
    },
)
