src/snapshots/hostlist_parser__tests__single item with double digit prefixed range.snap
---
source: src/lib.rs
assertion_line: 349
expression: "parse(\"hostname[009-011]\")"

---
Ok(
    [
        "hostname009",
        "hostname010",
        "hostname011",
    ],
)
