src/snapshots/hostlist_parser__tests__single item with range containing mixture of comma and dash.snap
---
source: src/lib.rs
expression: "parse(\"hostname[7,9-11].iml.com\")"
---
Ok(
    {
        "hostname10.iml.com",
        "hostname11.iml.com",
        "hostname7.iml.com",
        "hostname9.iml.com",
    },
)
