src/snapshots/hostlist_parser__tests__single item with single digit prefixed range.snap
---
source: src/lib.rs
assertion_line: 345
expression: "parse(\"hostname[09-11]\")"

---
Ok(
    [
        "hostname09",
        "hostname10",
        "hostname11",
    ],
)
