src/snapshots/hostlist_parser__tests__single item with single range and nothing after the range.snap
---
source: src/lib.rs
assertion_line: 340
expression: "parse(\"hostname[6]\")"

---
Ok(
    [
        "hostname6",
    ],
)
