src/snapshots/hostlist_parser__tests__single item with single range.snap
---
source: src/lib.rs
assertion_line: 335
expression: "parse(\"hostname[6].iml.com\")"

---
Ok(
    [
        "hostname6.iml.com",
    ],
)
