src/snapshots/hostlist_parser__tests__single item with two ranges.snap
---
source: src/lib.rs
assertion_line: 363
expression: "parse(\"hostname[6,7]-[9-11].iml.com\")"

---
Ok(
    [
        "hostname6-9.iml.com",
        "hostname6-10.iml.com",
        "hostname6-11.iml.com",
        "hostname7-9.iml.com",
        "hostname7-10.iml.com",
        "hostname7-11.iml.com",
    ],
)
