src/snapshots/hostlist_parser__tests__single item without ranges.snap
---
source: src/lib.rs
assertion_line: 328
expression: "parse(\"hostname1.iml.com\")"

---
Ok(
    [
        "hostname1.iml.com",
    ],
)
